# jots

./: .gitignore  CMakeLists.txt  README.md  TODOs  config_template.ini  config_template_preCICE.ini  jots_main.cpp  jots_main_prep.cpp  pw_mfem_mesh_fix.py  steady_config_template.ini  steady_heat_config_template.ini  template_equilibrium_linear_elasticity.ini  unsteady_config_template.ini  unsteady_heat_config_template.ini
.github/workflows/: cmake-single-platform.yml
examples/Heated_Plate/: Heated_Plate.ini
examples/Heated_Plate_preCICE/dummy/: solverdummy-python-parallel.py
examples/Heated_Plate_preCICE/jots/: Heated_Plate_preCICE.ini
examples/Linearized_Unsteady_Heat/Quiescent_IC_HeatFlux/: Quiescent_IC_HeatFlux.ini
examples/Linearized_Unsteady_Heat/Quiescent_IC_Isothermal/: Quiescent_IC_Isothermal.ini
examples/Linearized_Unsteady_Heat/Reinert_B1/: Reinert_B1.ini
examples/Modal_Oscillation_Plate_preCICE/jots/: Modal_Oscillation_Plate_preCICE.ini
examples/Quiescent_IC_HeatFlux/: Quiescent_IC_HeatFlux.ini
examples/Quiescent_IC_Isothermal/: Quiescent_IC_Isothermal.ini
examples/Reinert_B1/: Reinert_B1.ini  valgrind-out.txt
examples/Reinert_B1_preCICE/: precice-config.xml
examples/Reinert_B2/: Reinert_B2.ini
examples/Reinert_B3/: Reinert_B3.ini
examples/Reinert_B3_preCICE/: precice-config.xml
examples/Restarted_Sinusoidal_Isothermal_Heated_Bar/: Initial_Sinusoidal_Isothermal_Heated_Bar.ini  Restarted_Sinusoidal_Isothermal_Heated_Bar.ini  valgrind-out.txt
examples/Sinusoidal_HeatFlux_Heated_Bar/: Sinusoidal_HeatFlux_Heated_Bar.ini
examples/Sinusoidal_Isothermal_Heated_Bar/: Sinusoidal_Isothermal_Heated_Bar.ini
examples/meshes/: Danish_1D_bar.mesh  Reinert_1D_block.mesh  bar.mesh  cube_25_L0p01.mesh  square.mesh
jots/include/: global_vars.hpp.in
jots/src/: jots.cpp
src/: CMakeLists.txt  README.md  boundary_condition.cpp  boundary_condition.hpp  conduction_operator.cpp  conduction_operator.hpp  conductivity_model.cpp  conductivity_model.hpp  config_file.cpp  config_file.hpp  eq_linear_elastic_operator.cpp  eq_linear_elastic_operator.hpp  factory_functions.hpp  factory_functions.inl  helper_functions.hpp  helper_functions.inl  jots_common.hpp  jots_common.inl  jots_driver.cpp  jots_driver.hpp  jots_iterator.cpp  jots_iterator.hpp  jots_nlfis.cpp  jots_nlfis.hpp  jots_nlfs.cpp  jots_nlfs.hpp  jots_precice.cpp  jots_precice.hpp  linear_conduction_operator.cpp  linear_conduction_operator.hpp  material_property.cpp  material_property.hpp  nl_conduction_operator.cpp  nl_conduction_operator.hpp  option_structure.hpp  output_manager.cpp  output_manager.hpp  precice_adapter.cpp  precice_adapter.hpp  simulations.cpp  (+10 more)
tests/: CMakeLists.txt  Parallel_Reinert_B1.cpp  Parallel_Reinert_B2.cpp  Parallel_Reinert_B3.cpp  Reinert_B1.cpp  Reinert_B1.ini  Reinert_B1_preCICE.cpp  Reinert_B1_preCICE.ini  Reinert_B1_preCICE_Dummy.cpp  Reinert_B1_preCICE_config.xml  Reinert_B2.cpp  Reinert_B2.ini  Reinert_B3.cpp  Reinert_B3.ini  Reinert_B3_preCICE.cpp  Reinert_B3_preCICE.ini  Reinert_B3_preCICE_Dummy.cpp  Reinert_B3_preCICE_config.xml  Restart_Files.cpp  Restart_Files.ini  test_helper.hpp.in  test_info.hpp.in
tests/Heated_Plate/: Heated_Plate.ini
tests/Heated_Plate_preCICE/: precice-config.xml
tests/Heated_Plate_preCICE/dummy/: solverdummy-python-parallel.py
tests/Heated_Plate_preCICE/jots/: Heated_Plate_preCICE.ini
tests/Modal_Oscillation_Plate_preCICE/: precice-config.xml
tests/Modal_Oscillation_Plate_preCICE/dummy/: solverdummy-python-parallel.py
tests/Modal_Oscillation_Plate_preCICE/jots/: Modal_Oscillation_Plate_preCICE.ini
tests/Quiescent_IC_HeatFlux/: Quiescent_IC_HeatFlux.ini
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000000/: proc000000.vtu
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000001/: data.pvtu  proc000000.vtu
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000002/: proc000000.vtu
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000003/: proc000000.vtu
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000004/: proc000000.vtu
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000005/: proc000000.vtu
tests/Quiescent_IC_HeatFlux/ParaView/Output/Cycle000006/: proc000000.vtu
tests/Quiescent_IC_Isothermal/: .msh  Quiescent_IC_Isothermal.ini  Quiescent_Isothermal_IC.ini  plate.msh
tests/Reinert_B1/: README.md  Reinert_B1.ini
tests/Reinert_B2/: README.md  Reinert_B2.ini
tests/Reinert_B3/: Reinert_B3.ini
tests/Reinhart_B1/: README.md  Reinhart_B1.ini
tests/Reinhart_B2/: README.md  Reinhart_B2.ini
tests/Reinhart_B3/: README.md
tests/Restarted_Sinusoidal_Isothermal_Heated_Bar/: Initial_Sinusoidal_Isothermal_Heated_Bar.ini  Restarted_Sinusoidal_Isothermal_Heated_Bar.ini
tests/Sinusoidal_HeatFlux_Heated_Bar/: Sinusoidal_HeatFlux_Heated_Bar.ini
tests/Sinusoidal_Isothermal_Heated_Bar/: Sinusoidal_Isothermal_Heated_Bar.ini
tests/Sinusoidal_Isothermal_PolynomialCond_Heated_Bar/: Sinusoidal_Isothermal_Heated_Bar.ini
tests/linear_isotropic_steady_elastic/: CMakeLists.txt  Plane_Stress_Slaughter_7.4.3.cpp  Plane_Stress_Slaughter_7.4.3.ini.in
tests/linearized_unsteady_heat/: CMakeLists.txt  Reinert_B1.cpp  Reinert_B1.ini.in  Reinert_B1_preCICE.cpp  Reinert_B1_preCICE.ini.in  Reinert_B2.cpp  Reinert_B2.ini.in  Reinert_B3.cpp  Reinert_B3.ini.in  Reinert_B3_preCICE.cpp  Reinert_B3_preCICE.ini.in  Restart_Files.cpp  Restart_Files.ini.in
tests/nonlinear_unsteady_heat/: CMakeLists.txt  NL_Reinert_B1.cpp  NL_Reinert_B1.ini.in  NL_Reinert_B2.cpp  NL_Reinert_B2.ini.in  NL_Reinert_B3.cpp  NL_Reinert_B3.ini.in
tests/preCICE_Dummy_Heated_Plate/: precice-config.xml
tests/preCICE_Dummy_Heated_Plate/jots/: Heated_Plate.ini
tests/steady_heat/: CMakeLists.txt  Danish_Model1.cpp  Danish_Model1.ini.in  Danish_Model1_Neumann.cpp  Danish_Model1_Neumann.ini.in
tests/unsteady_heat/: CMakeLists.txt  Reinert_B1.ini.in  Reinert_B1_preCICE.cpp  Reinert_B1_preCICE.ini.in  Reinert_B2.cpp  Reinert_B2.ini.in  Reinert_B3.cpp  Reinert_B3.ini.in  Reinert_B3_preCICE.ini.in  Restart_Files.cpp  Restart_Files.ini.in
(+41 files in other folders)
